--- a/static/css/style.css
+++ b/static/css/style.css
@@ -617,6 +617,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
 .-ml-6 {
   margin-left: -1.5rem;
 }
@@ -627,14 +631,6 @@ video {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mb-24 {
-  margin-bottom: 6rem;
-}
-
-.-mt-20 {
-  margin-top: -5rem;
 }
 
 .mt-10 {
@@ -890,8 +886,8 @@ video {
   padding-right: 1.75rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pb-16 {
@@ -984,6 +980,12 @@ video {
 
 .box-shadow-main {
   box-shadow: 0px 80px 100px -30px rgba(31, 203, 255, .5);
+}
+
+@media only screen and (min-height: 917px) {
+  .main-content {
+    margin-top: -140px;
+  }
 }
 
 .add-token-dropdown-A {
@@ -1229,10 +1231,6 @@ li:hover {
 }
 
 @media (min-width: 768px) {
-  .md\:-mt-24 {
-    margin-top: -6rem;
-  }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
